disable PJ_HASH_USE_OWN_TOLOWER, as Digium recommends

http://lists.digium.com/pipermail/asterisk-dev/2016-December/076026.html
https://issues.asterisk.org/jira/browse/ASTERISK-26490